# Opencv_Producer_Consumer

./: CMakeLists.txt  Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  main.cpp
